# psips

./: CMakeLists.txt  README.md  T_star_vs_rho.ipynb  main.cpp  requirements.txt  rr_elim.ipynb
T8JZ/: tns_add_exp.ipynb
YJFM/: rr_elim.ipynb
ext/: algos.py  hedge.py  lbd.py  pareto_2d.py  pareto_generic.py  pareto_nd.py  plot_figs.py  track_and_stop.py  utils.py
sUN3/: T_star_vs_rho.ipynb
src/: ada_hedge.cxx  ada_hedge.hpp  bandits.cxx  bandits.hpp  fcts.cxx  fcts.hpp  learners.cxx  learners.hpp  noc.hpp  policies.cxx  policies.hpp  utils.cxx  utils.hpp  xp.hpp
xps/: mbayes.py  mcorrelation.py  mcovboost.py  mcovboost_chrono.py  mempM.py  mfb.py  mnoc.py
